fix cssBayan-task (Sat, 03.11.2023 21:02)

--- a/m2volk_cyber/style.css
+++ b/m2volk_cyber/style.css
@@ -1,41 +1,65 @@
-* {
-    margin: 0;
-    padding: 0;
-}
+body{
+    font-family: arial,sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #fff;
 
-body {
-    background-color: bisque;
-    padding: 5%;
-    font-family: arial;
+    background-color: black;
 }
-
-.accordeon {
-    background-color: aquamarine;
-    padding: 5px;
-}
-
-.accordeon__item {
-    margin: 10px;
-}
-
-.accordeon__title {
-    background-color: #369;
-    color: #000;
-    padding: 5px;
-    cursor: pointer;
-}
-
-.accordeon__item.active .accordeon__title,
-.accordeon__title:hover{
-    background-color: rgb(23, 48, 74);
-}
-
-.accordeon__content {
-    padding: 10px;
-    border: 3px solid #369;
-    display: none;
-}
-
-.accordeon__item.active .accordeon__content {
+.faq-title {
     display: block;
+    padding: 10px 15px;
+    position: relative;
+
+    cursor: pointer;
+    color: #fff;
+
+    transition: background .2s ease-out ;
+}
+.faq-title:hover {
+    background-color: blue;
+}
+.faq {
+    max-width: 500px;
+    margin: 20px auto;
+}
+.faq-item {
+    border: 1px solid #c7c7c7;
+    margin-bottom: 5px;
+}
+.faq-img {
+    display: none;
+    font-size: 14px;
+    text-align: center;
+}
+.faq-input {
+    width: 0;
+    height: 0;
+
+    appearance: none;
+    position: absolute;
+}
+.faq-input:checked ~ .faq-title {
+    background-color: blue;
+}
+
+.faq-input:checked ~ .faq-img {
+    display: block;
+}
+.faq-title::after {
+    content: "";
+    display: block;
+
+    border-style: solid;
+    border-width: 0 25px 25px 25px;
+    border-color: transparent transparent #007bff transparent;
+   
+
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+}
+img {
+    max-width: 300px;
 }
