--- a/m2volk_cyber/style.css
+++ b/m2volk_cyber/style.css
@@ -63,3 +63,12 @@ body{
 img {
     max-width: 300px;
 }
+@media screen and (max-width: 1920px) {
+    div.cntentblock{width: 1900px;}
+}
+@media screen and (max-width: 820px) {
+    div.cntentblock{width: 800px;}
+}
+@media screen and (max-width: 320px) {
+    div.cntentblock{width: 300px;}
+}
