--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -64,11 +64,11 @@ img {
     max-width: 300px;
 }
 @media screen and (max-width: 1920px) {
-    div.cntentblock{width: 1900px;}
+    div.faq{width: 1900px;}
 }
 @media screen and (max-width: 820px) {
-    div.cntentblock{width: 800px;}
+    div.faq{width: 800px;}
 }
 @media screen and (max-width: 320px) {
-    div.cntentblock{width: 300px;}
+    div.faq{width: 300px;}
 }
