fix: wrapper (Mon, 03.13.2023 16:22)

--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -6,6 +6,9 @@ body{
 
     background-color: black;
 }
+.wrapper {
+    text-align: center;
+}
 .faq-title {
     display: block;
     padding: 10px 15px;
